output/AbiDMLParser.java
// $ANTLR 3.4 /Users/zhou/Projects/ETL2Py/AbiDML.g 2012-12-06 10:38:42

import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings({"all", "warnings", "unchecked"})
public class AbiDMLParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ESC_SEQ", "EXPONENT", "FLOAT", "HEX_DIGIT", "ID", "INT", "OCTAL_ESC", "STRING", "UNICODE_ESC", "WS", "'!'", "'!='", "'$'", "'%'", "'&&'", "'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "':'", "'::'", "';'", "'<'", "'<<'", "'<='", "'='", "'=='", "'>'", "'>='", "'>>'", "'?'", "'NULL'", "'['", "']'", "'^'", "'and'", "'ascii'", "'begin'", "'big'", "'case'", "'char'", "'date'", "'datetime'", "'decimal'", "'default'", "'delimiter'", "'double'", "'ebcdic'", "'else'", "'end'", "'endian'", "'float'", "'for'", "'ibm'", "'ieee'", "'if'", "'int'", "'integer'", "'iso_8859_2'", "'iso_8859_3'", "'iso_8859_4'", "'iso_8859_5'", "'iso_8859_6'", "'iso_8859_7'", "'iso_8859_8'", "'iso_8859_9'", "'jis_201'", "'jis_208_euc'", "'jis_208_sjis'", "'let'", "'little'", "'long'", "'or'", "'packed'", "'real'", "'record'", "'reinterpret_as'", "'short'", "'signed'", "'string'", "'switch'", "'this_record'", "'unicode'", "'unsigned'", "'utf8'", "'vector'", "'void'", "'while'", "'|'", "'||'", "'~'"
    };

    public static final int EOF=-1;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__84=84;
    public static final int T__85=85;
    public static final int T__86=86;
    public static final int T__87=87;
    public static final int T__88=88;
    public static final int T__89=89;
    public static final int T__90=90;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__95=95;
    public static final int T__96=96;
    public static final int T__97=97;
    public static final int T__98=98;
    public static final int T__99=99;
    public static final int T__100=100;
    public static final int COMMENT=4;
    public static final int ESC_SEQ=5;
    public static final int EXPONENT=6;
    public static final int FLOAT=7;
    public static final int HEX_DIGIT=8;
    public static final int ID=9;
    public static final int INT=10;
    public static final int OCTAL_ESC=11;
    public static final int STRING=12;
    public static final int UNICODE_ESC=13;
    public static final int WS=14;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "field_name", "synpred130_AbiDML", "synpred38_AbiDML", 
    "synpred65_AbiDML", "top_level", "synpred39_AbiDML", "synpred4_AbiDML", 
    "procedural_statement_list", "synpred41_AbiDML", "synpred59_AbiDML", 
    "synpred18_AbiDML", "param_list", "unarycall", "conditional", "synpred49_AbiDML", 
    "synpred94_AbiDML", "assignment", "variable_declaration", "synpred34_AbiDML", 
    "synpred17_AbiDML", "synpred26_AbiDML", "synpred113_AbiDML", "synpred8_AbiDML", 
    "param", "vector_type", "synpred50_AbiDML", "declaration", "synpred139_AbiDML", 
    "synpred142_AbiDML", "synpred16_AbiDML", "synpred78_AbiDML", "synpred148_AbiDML", 
    "synpred6_AbiDML", "synpred162_AbiDML", "synpred163_AbiDML", "case_actions", 
    "varstring_length_type", "endian_spec", "synpred86_AbiDML", "synpred99_AbiDML", 
    "synpred68_AbiDML", "synpred12_AbiDML", "unop", "conditionalop", "synpred144_AbiDML", 
    "synpred10_AbiDML", "synpred74_AbiDML", "synpred124_AbiDML", "synpred20_AbiDML", 
    "synpred42_AbiDML", "binary_integer_type", "synpred149_AbiDML", "out_expr", 
    "synpred3_AbiDML", "synpred7_AbiDML", "synpred155_AbiDML", "synpred95_AbiDML", 
    "opt_statement", "synpred140_AbiDML", "synpred2_AbiDML", "funcall_expr", 
    "synpred121_AbiDML", "name_list", "synpred141_AbiDML", "synpred91_AbiDML", 
    "synpred53_AbiDML", "synpred73_AbiDML", "synpred133_AbiDML", "void_type", 
    "synpred36_AbiDML", "synpred123_AbiDML", "synpred88_AbiDML", "synpred70_AbiDML", 
    "for_statement", "synpred13_AbiDML", "out_expr_list", "native_type", 
    "synpred22_AbiDML", "synpred43_AbiDML", "synpred103_AbiDML", "synpred28_AbiDML", 
    "synpred32_AbiDML", "synpred62_AbiDML", "match_list", "synpred116_AbiDML", 
    "synpred61_AbiDML", "synpred77_AbiDML", "synpred143_AbiDML", "real_type", 
    "cast_expr", "synpred98_AbiDML", "synpred89_AbiDML", "synpred152_AbiDML", 
    "slot", "synpred97_AbiDML", "synpred156_AbiDML", "datetime_type", "synpred21_AbiDML", 
    "synpred161_AbiDML", "synpred24_AbiDML", "make_record_expr", "synpred104_AbiDML", 
    "rule", "record_type", "synpred69_AbiDML", "character_family", "synpred71_AbiDML", 
    "synpred137_AbiDML", "synpred164_AbiDML", "synpred150_AbiDML", "synpred90_AbiDML", 
    "synpred109_AbiDML", "synpred134_AbiDML", "reinterpret_expr", "synpred66_AbiDML", 
    "if_statement", "synpred55_AbiDML", "synpred87_AbiDML", "element_expr", 
    "synpred93_AbiDML", "synpred132_AbiDML", "binop", "name", "synpred64_AbiDML", 
    "synpred119_AbiDML", "synpred147_AbiDML", "synpred9_AbiDML", "synpred151_AbiDML", 
    "base_type", "synpred111_AbiDML", "getenv_expr", "optional_priority", 
    "synpred157_AbiDML", "synpred110_AbiDML", "synpred129_AbiDML", "primary_expression", 
    "synpred105_AbiDML", "synpred145_AbiDML", "synpred126_AbiDML", "string_type", 
    "synpred159_AbiDML", "synpred63_AbiDML", "sign_spec", "synpred117_AbiDML", 
    "if_expression", "arg_list", "null_expr", "synpred85_AbiDML", "synpred125_AbiDML", 
    "argument_list", "synpred76_AbiDML", "synpred114_AbiDML", "while_statement", 
    "synpred100_AbiDML", "synpred51_AbiDML", "whole_record_expr", "synpred56_AbiDML", 
    "synpred60_AbiDML", "synpred19_AbiDML", "synpred115_AbiDML", "procedural_statement", 
    "synpred47_AbiDML", "synpred128_AbiDML", "slots", "synpred120_AbiDML", 
    "synpred165_AbiDML", "loop_expr", "synpred11_AbiDML", "synpred57_AbiDML", 
    "synpred23_AbiDML", "synpred112_AbiDML", "block_statement", "synpred5_AbiDML", 
    "synpred92_AbiDML", "arg", "xfr_statement_list", "synpred146_AbiDML", 
    "synpred81_AbiDML", "synpred75_AbiDML", "expression", "delimiter_expr", 
    "date_type", "vector_length_type", "opt_delim", "type", "synpred46_AbiDML", 
    "record_expr_slots", "decl_string", "synpred138_AbiDML", "decimal_type", 
    "xfr_statement", "synpred122_AbiDML", "field_expr", "compounding_type", 
    "switch_statement", "synpred40_AbiDML", "variable_expr", "synpred166_AbiDML", 
    "synpred80_AbiDML", "synpred82_AbiDML", "float_family", "synpred107_AbiDML", 
    "ifr_expression", "synpred84_AbiDML", "opt_semicolon", "synpred31_AbiDML", 
    "synpred30_AbiDML", "binarycall", "synpred33_AbiDML", "synpred58_AbiDML", 
    "synpred136_AbiDML", "var_list", "synpred54_AbiDML", "var", "synpred27_AbiDML", 
    "synpred153_AbiDML", "synpred118_AbiDML", "synpred45_AbiDML", "synpred67_AbiDML", 
    "synpred15_AbiDML", "constant_expr", "synpred96_AbiDML", "transform_declaration", 
    "synpred101_AbiDML", "synpred154_AbiDML", "synpred29_AbiDML", "synpred135_AbiDML", 
    "synpred102_AbiDML", "synpred25_AbiDML", "synpred160_AbiDML", "synpred158_AbiDML", 
    "synpred37_AbiDML", "synpred44_AbiDML", "synpred1_AbiDML", "synpred127_AbiDML", 
    "variable_declaration_list", "synpred83_AbiDML", "synpred131_AbiDML", 
    "opt_init", "make_vector_expr", "declaration_list", "synpred72_AbiDML", 
    "synpred48_AbiDML", "synpred79_AbiDML", "synpred106_AbiDML", "synpred52_AbiDML", 
    "synpred108_AbiDML", "size_expr", "synpred14_AbiDML", "synpred35_AbiDML"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, true, 
        false, false, false, false, false, false, true, false, true, true, 
        false, false, false, false, false, false, false, false, false, true, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false, false, true, false, false, true, true, true, true, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public AbiDMLParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public AbiDMLParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this, port, null);

        setDebugListener(proxy);
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
    }

public AbiDMLParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg, new RecognizerSharedState());
}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

    public String[] getTokenNames() { return AbiDMLParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/zhou/Projects/ETL2Py/AbiDML.g"; }


    HashMap symtable = new HashMap();
    int indentlevel = 0;

    public void output(String s) {
        for (int i = 0; i < indentlevel; i++) {
            System.out.print("    ");
        }
        System.out.println(s);
    }



    // $ANTLR start "top_level"
    // /Users/zhou/Projects/ETL2Py/AbiDML.g:23:1: top_level : ( type opt_semicolon | declaration_list );
    public final void top_level() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "top_level");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(23, 0);

        try {
            // /Users/zhou/Projects/ETL2Py/AbiDML.g:24:2: ( type opt_semicolon | declaration_list )
            int alt1=2;
            try { dbg.enterDecision(1, decisionCanBacktrack[1]);

            int LA1_0 = input.LA(1);

            if ( (LA1_0==46||LA1_0==48||(LA1_0 >= 50 && LA1_0 <= 53)||(LA1_0 >= 56 && LA1_0 <= 57)||LA1_0==61||(LA1_0 >= 63 && LA1_0 <= 64)||(LA1_0 >= 66 && LA1_0 <= 78)||(LA1_0 >= 80 && LA1_0 <= 81)||(LA1_0 >= 83 && LA1_0 <= 85)||(LA1_0 >= 87 && LA1_0 <= 89)||(LA1_0 >= 93 && LA1_0 <= 94)||LA1_0==96) ) {
                alt1=1;
            }
            else if ( (LA1_0==ID) ) {
                alt1=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(1);}

            switch (alt1) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/zhou/Projects/ETL2Py/AbiDML.g:24:4: type opt_semicolon
                    {
                    dbg.location(24,4);
                    pushFollow(FOLLOW_type_in_top_level36);
                    type();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(24,9);
                    pushFollow(FOLLOW_opt_semicolon_in_top_level38);
                    opt_semicolon();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/zhou/Projects/ETL2Py/AbiDML.g:24:25: declaration_list
                    {
                    dbg.location(24,25);
                    pushFollow(FOLLOW_declaration_list_in_top_level42);
                    declaration_list();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(25, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "top_level");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "top_level"


    public static class type_return extends ParserRuleReturnScope {
        public String typename;
        public Object value;
        public Object extra;
    };


    // $ANTLR start "type"
    // /Users/zhou/Projects/ETL2Py/AbiDML.g:28:1: type returns [String typename, Object value, Object extra] : ( base_type | compounding_type );
    public final AbiDMLParser.type_return type() throws RecognitionException {
        AbiDMLParser.type_return retval = new AbiDMLParser.type_return();
        retval.start = input.LT(1);


        AbiDMLParser.base_type_return base_type1 =null;


        try { dbg.enterRule(getGrammarFileName(), "type");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(28, 0);

        try {
            // /Users/zhou/Projects/ETL2Py/AbiDML.g:29:2: ( base_type | compounding_type )
            int alt2=2;
            try { dbg.enterDecision(2, decisionCanBacktrack[2]);

            try {
                isCyclicDecision = true;
                alt2 = dfa2.predict(input);
            }
            catch (NoViableAltException nvae) {
                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/zhou/Projects/ETL2Py/AbiDML.g:29:4: base_type
                    {
                    dbg.location(29,4);
                    pushFollow(FOLLOW_base_type_in_type58);
                    base_type1=base_type();

                    state._fsp--;
                    if (state.failed) return retval;
                    dbg.location(30,3);
                    if ( state.backtracking==0 ) {
                    			retval.typename = (base_type1!=null?base_type1.typename:null);
                    			retval.value = (base_type1!=null?base_type1.value:null);
                    			retval.extra = (base_type1!=null?base_type1.extra:null);
                    		}

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/zhou/Projects/ETL2Py/AbiDML.g:36:3: compounding_type
                    {
                    dbg.location(36,3);
                    pushFollow(FOLLOW_compounding_type_in_type70);
                    compounding_type();

                    state._fsp--;
                    if (state.failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(37, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "type");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "type"


    public static class base_type_return extends ParserRuleReturnScope {
        public String typename;
        public Object value;
        public Object extra;
    };


    // $ANTLR start "base_type"
    // /Users/zhou/Projects/ETL2Py/AbiDML.g:39:1: base_type returns [String typename, Object value, Object extra] : ( native_type | binary_integer_type | decimal_type | real_type | date_type | datetime_type | string_type | void_type );
    public final AbiDMLParser.base_type_return base_type() throws RecognitionException {
        AbiDMLParser.base_type_return retval = new AbiDMLParser.base_type_return();
        retval.start = input.LT(1);


        String native_type2 =null;

        String decimal_type3 =null;

        String string_type4 =null;


        try { dbg.enterRule(getGrammarFileName(), "base_type");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(39, 0);

        try {
            // /Users/zhou/Projects/ETL2Py/AbiDML.g:40:2: ( native_type | binary_integer_type | decimal_type | real_type | date_type | datetime_type | string_type | void_type )
            int alt3=8;
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            switch ( input.LA(1) ) {
            case 88:
            case 93:
                {
                switch ( input.LA(2) ) {
                case 50:
                case 66:
                case 81:
                case 87:
                    {
                    alt3=1;
                    }
                    break;
                case 48:
                    {
                    int LA3_27 = input.LA(3);

                    if ( (LA3_27==60) ) {
                        int LA3_31 = input.LA(4);

                        if ( (LA3_31==67) ) {
                            alt3=2;
                        }
                        else if ( ((LA3_31 >= 63 && LA3_31 <= 64)||LA3_31==84) ) {
                            alt3=4;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 3, 31, input);

                            dbg.recognitionException(nvae);
                            throw nvae;

                        }
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 27, input);

                        dbg.recognitionException(nvae);
                        throw nvae;

                    }
                    }
                    break;
                case 80:
                    {
                    int LA3_28 = input.LA(3);

                    if ( (LA3_28==60) ) {
                        int LA3_32 = input.LA(4);

                        if ( (LA3_32==67) ) {
                            alt3=2;
                        }
                        else if ( ((LA3_32 >= 63 && LA3_32 <= 64)||LA3_32==84) ) {
                            alt3=4;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 3, 32, input);

                            dbg.recognitionException(nvae);
                            throw nvae;

                        }
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 28, input);

                        dbg.recognitionException(nvae);
                        throw nvae;
